# ChangeLog for dev-python/jinja
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/jinja/ChangeLog,v 1.107 2014/04/01 04:57:29 floppym Exp $

  01 Apr 2014; Mike Gilbert <floppym@gentoo.org> jinja-2.7.1.ebuild:
  Add python3.4.

  31 Mar 2014; Michał Górny <mgorny@gentoo.org> jinja-2.6-r1.ebuild,
  jinja-2.6-r2.ebuild, jinja-2.7.1.ebuild, jinja-2.7.ebuild:
  Add support for the new PyPy slotting.

  05 Sep 2013; Michał Górny <mgorny@gentoo.org> jinja-2.6-r1.ebuild,
  jinja-2.6-r100.ebuild, jinja-2.6-r2.ebuild, jinja-2.7.1.ebuild,
  jinja-2.7.ebuild:
  Clean up PYTHON_COMPAT from old implementations.

  02 Sep 2013; Agostino Sarubbo <ago@gentoo.org> jinja-2.6-r1.ebuild:
  Stable for sparc, wrt bug #477970

  02 Sep 2013; Agostino Sarubbo <ago@gentoo.org> jinja-2.6-r1.ebuild:
  Stable for sh, wrt bug #477970

  02 Sep 2013; Agostino Sarubbo <ago@gentoo.org> jinja-2.6-r1.ebuild:
  Stable for s390, wrt bug #477970

  02 Sep 2013; Agostino Sarubbo <ago@gentoo.org> jinja-2.6-r1.ebuild:
  Stable for ia64, wrt bug #477970

  02 Sep 2013; Agostino Sarubbo <ago@gentoo.org> jinja-2.6-r1.ebuild:
  Stable for alpha, wrt bug #477970

  02 Sep 2013; Agostino Sarubbo <ago@gentoo.org> jinja-2.6-r100.ebuild:
  Stable for ppc64, wrt bug #481800

  02 Sep 2013; Agostino Sarubbo <ago@gentoo.org> jinja-2.7.ebuild:
  Stable for sparc, wrt bug #480092

  02 Sep 2013; Agostino Sarubbo <ago@gentoo.org> jinja-2.6-r100.ebuild:
  Stable for sparc, wrt bug #481800

  02 Sep 2013; Agostino Sarubbo <ago@gentoo.org> jinja-2.7.ebuild:
  Stable for sh, wrt bug #480092

  02 Sep 2013; Agostino Sarubbo <ago@gentoo.org> jinja-2.6-r100.ebuild:
  Stable for sh, wrt bug #481800

  02 Sep 2013; Agostino Sarubbo <ago@gentoo.org> jinja-2.7.ebuild:
  Stable for s390, wrt bug #480092

  02 Sep 2013; Agostino Sarubbo <ago@gentoo.org> jinja-2.6-r100.ebuild:
  Stable for s390, wrt bug #481800
