@@ -1,6 +1,11 @@
 # ChangeLog for dev-python/jinja
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/jinja/ChangeLog,v 1.107 2014/04/01 04:57:29 floppym Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/jinja/ChangeLog,v 1.108 2014/05/18 00:48:27 idella4 Exp $
+
+*jinja-2.7.2 (18 May 2014)
+
+  18 May 2014; Ian Delaney <idella4@gentoo.org> +jinja-2.7.2.ebuild:
+  bump; drop py2.6 pypy2_0 support, minor tidy
 
   01 Apr 2014; Mike Gilbert <floppym@gentoo.org> jinja-2.7.1.ebuild:
   Add python3.4.
